# cg_homework

./: CMakeLists.txt
file/: file.maz
src/: maze.cpp
